Add: added topSongs api with swager docs and some changes
