# src/routes/songRoutes.js
@@ -2,7 +2,7 @@ const express = require('express')
 const songRouter = express.Router()
 const upload = require('../middlewares/upload')
 const {protect, isAdmin} = require('../middlewares/auth')
-const {createSong, getSongs, getSongById, updateSong, deleteSong} = require('../controllers/songController')
+const {createSong, getSongs, getSongById, updateSong, deleteSong, getTopSongs} = require('../controllers/songController')
 
 const songUpload = upload.fields([
     { name: "audio", maxCount: 1 },
@@ -11,7 +11,9 @@ const songUpload = upload.fields([
 
 songRouter.post('/', protect, isAdmin, songUpload, createSong )
 songRouter.get('/', getSongs)
+songRouter.get('/top', getTopSongs)
 songRouter.get('/:id', getSongById)
+
 
 songRouter.put('/:id', songUpload, protect, isAdmin, updateSong)
 songRouter.delete('/:id', protect, isAdmin, deleteSong)
